# MINI-Projects-for-ROS2-OpenCV

./: README.md  Red_Ball_Tracking
image_webcam_basic/: README.md  image_pub_node.py  image_sub_node.py
red_ball_tracking/: README.md  __init__.py  color_pub_node.py  package.xml  setup.py
