<?xml version="1.0"?>
<package format="3">
  <name>red_ball_tracking</name>
  <version>0.1.0</version>
  <description>Red Ball Tracking with ROS2 and OpenCV</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <build_type>ament_python</build_type>
</package>
